add sell ticket